--- a/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
@@ -224,13 +224,436 @@
     "for i, method in enumerate(methods, 1):\n",
     "    print(f\"Method {i}: {method}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b4960e1-494d-4534-ab2c-59eebe57228d",
+   "metadata": {},
+   "source": [
+    "3. Break Statement\n",
+    "\n",
+    "Write a while loop that keeps asking the user to input numbers.\n",
+    "\n",
+    "Break the loop if the user enters a negative number.\n",
+    "Re-question: How can you modify the loop so it ignores negative numbers instead of breaking?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d965630f-b672-4787-9e90-2e98ee9a44d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 5\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 6\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  -3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo detectado. Fin del programa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# en primer lugar, se va a crear el bucle con while. \n",
+    "# para esto utilizaremos la función break.\n",
+    "while True:\n",
+    "    num = int(input(\"Ingresa un número: \"))\n",
+    "    if num < 0:\n",
+    "        print(\"Número negativo detectado. Fin del programa.\")\n",
+    "        break\n",
+    "    print(f\"Ingresaste: {num}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9f7e6c08-91fa-4a8e-9379-8ca6c7feca41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 5\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 6\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 7\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  -1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo ignorado, intenta de nuevo.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  -3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número negativo ignorado, intenta de nuevo.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  \"break\"\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '\"break\"'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# ahora se atiende la segunda pregunta. Que el bucle while ignore el número negativo y continue. \u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[1;32m----> 3\u001b[0m     num \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIngresa un número: \u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m num \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNúmero negativo ignorado, intenta de nuevo.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '\"break\"'"
+     ]
+    }
+   ],
+   "source": [
+    "# ahora se atiende la segunda pregunta. Que el bucle while ignore el número negativo y continue. \n",
+    "# para esto utilizaremos la función continue\n",
+    "while True:\n",
+    "    num = int(input(\"Ingresa un número: \"))\n",
+    "    if num < 0:\n",
+    "        print(\"Número negativo ignorado, intenta de nuevo.\")\n",
+    "        continue\n",
+    "    print(f\"Ingresaste: {num}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3947138d-79be-4910-9a40-ff8a4ca25972",
+   "metadata": {},
+   "source": [
+    "4. Try-Except Block\n",
+    "\n",
+    "Write a loop that asks the user to input a number and divides 100 by that number.\n",
+    "\n",
+    "- Use a try-except block to handle the case when the user inputs 0 or a non-numeric value.\n",
+    "- Re-question: How would you improve the code to keep asking until a valid input is provided?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8f78b083-3eb2-4536-9ac0-9f3738121fc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  break\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Entrada inválida. Por favor ingresa un número.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 dividido entre 4 es 25.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vamos a utilizar un bucle con while y la función try\n",
+    "while True:\n",
+    "    try:\n",
+    "        num = int(input(\"Ingresa un número: \"))\n",
+    "        resultado = 100 / num\n",
+    "        print(f\"100 dividido entre {num} es {resultado}\")\n",
+    "        break  # termina el bucle si no hay error\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"❌ No puedes dividir entre 0. Intenta de nuevo.\")\n",
+    "    except ValueError:\n",
+    "        print(\"❌ Entrada inválida. Por favor ingresa un número.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d0f9f624-adb1-4d92-a4c5-2266b62f0a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número distinto de 0:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ No se puede dividir entre 0. Intenta otra vez.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número distinto de 0:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ 100 dividido entre 2 es 50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# respecto a la re-pregunta sobre como mejorar para que siga preguntando hasta que tener un input valido\n",
+    "while True:\n",
+    "    try:\n",
+    "        num = int(input(\"Ingresa un número distinto de 0: \"))\n",
+    "        resultado = 100 / num\n",
+    "    except ValueError:\n",
+    "        print(\"❌ Eso no es un número. Intenta otra vez.\")\n",
+    "        continue\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"❌ No se puede dividir entre 0. Intenta otra vez.\")\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(f\"✅ 100 dividido entre {num} es {resultado}\")\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9abc87b-0e72-41ac-b461-4c4fb4216e84",
+   "metadata": {},
+   "source": [
+    "5. While Loop Structure\n",
+    "\n",
+    "Write a while loop that calculates the factorial of a given number n.\n",
+    "\n",
+    "Print each intermediate step of the factorial calculation.\n",
+    "Re-question: How would you implement the same factorial calculation using a for loop instead?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "cde60162-627b-4e21-ba95-d4f1711e1f2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número para calcular su factorial:  4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paso 1: factorial = 1\n",
+      "Paso 2: factorial = 2\n",
+      "Paso 3: factorial = 6\n",
+      "Paso 4: factorial = 24\n",
+      "\n",
+      "El factorial de 4 es 24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# vamos a usar la función while\n",
+    "n = int(input(\"Ingresa un número para calcular su factorial: \"))\n",
+    "\n",
+    "factorial = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= n:\n",
+    "    factorial *= i\n",
+    "    print(f\"Paso {i}: factorial = {factorial}\")\n",
+    "    i += 1\n",
+    "\n",
+    "print(f\"\\nEl factorial de {n} es {factorial}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "90ead8f7-c5f1-42f7-a1e1-aec421021b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número para calcular su factorial:  5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paso 1: factorial = 1\n",
+      "Paso 2: factorial = 2\n",
+      "Paso 3: factorial = 6\n",
+      "Paso 4: factorial = 24\n",
+      "Paso 5: factorial = 120\n",
+      "\n",
+      "El factorial de 5 es 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ahora se realiza lo mismo con el bucle for\n",
+    "n = int(input(\"Ingresa un número para calcular su factorial: \"))\n",
+    "\n",
+    "factorial = 1\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    factorial *= i\n",
+    "    print(f\"Paso {i}: factorial = {factorial}\")\n",
+    "\n",
+    "print(f\"\\nEl factorial de {n} es {factorial}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6e24846-b373-4be4-a436-8b366f07d3bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -242,7 +665,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
