--- a/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
@@ -15,11 +15,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "701a1716-8225-4e1c-87f6-0e8d27804f34",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use the pass statement when the number is even, and print only the odd numbers.\n",
+    "for n in range(1, 11):\n",
+    "    if n % 2 == 0:\n",
+    "        pass          # si es par, no hago nada\n",
+    "    else:\n",
+    "        print(n)      # solo imprime los impares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2823cd57-ba81-49b7-b1ad-9dee559dd280",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# What would happen if you remove the pass statement? \n",
+    "for n in range(1, 11):\n",
+    "    if n % 2 == 0:\n",
+    "        print(n)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5a4252f3-940a-4fd9-a3e8-bcd9c1ef9d38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# corrected version - Opción A\n",
+    "for n in range(1, 11):\n",
+    "    if n % 2 != 0:\n",
+    "        print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "600f4583-d098-4120-b8d6-196f3299b561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# corrected version - Opción B\n",
+    "for n in range(1, 11):\n",
+    "    if n % 2 == 0:\n",
+    "        continue\n",
+    "    print(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -36,11 +131,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d91f7a98-0e36-4e51-acdd-7e9a9dc27353",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "n\n",
+      "l\n",
+      "p\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Skip the letters \"o\" using the continue statement and print the remaining letters.\n",
+    "s = \"pythonloops\"\n",
+    "for ch in s:\n",
+    "    if ch == \"o\":\n",
+    "        continue   # salta a la siguiente iteración\n",
+    "    print(ch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "149ad975-4e98-44b0-a762-a4b5016927ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "n\n",
+      "l\n",
+      "p\n",
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#How would you achieve the same result without using continue?\n",
+    "s = \"pythonloops\"\n",
+    "for ch in s:\n",
+    "    if ch != \"o\":   # solo imprimimos si no es \"o\"\n",
+    "        print(ch)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,11 +204,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b8fa7857-f996-4bac-9aa2-9c4238d89866",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 2\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  -1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fin del programa.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Break the loop if the user enters a negative number.\n",
+    "while True:\n",
+    "    n = int(input(\"Ingresa un número: \"))\n",
+    "    if n < 0:\n",
+    "        break           # rompe el bucle si es negativo\n",
+    "    print(f\"Ingresaste: {n}\")\n",
+    "\n",
+    "print(\"Fin del programa.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "92885df4-ee3b-4550-a16c-845d88c8a847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingresaste: 1\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número:  -1\n",
+      "Ingresa un número:  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How can you modify the loop so it ignores negative numbers instead of breaking? - Opción A\n",
+    "while True:\n",
+    "    n = int(input(\"Ingresa un número: \"))\n",
+    "    if n < 0:\n",
+    "        continue  # Ignora los números negativos y vuelve a pedir un número\n",
+    "    if n == 0:\n",
+    "        break     # Termina el bucle si el número es 0\n",
+    "    print(f\"Ingresaste: {n}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -80,11 +318,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "42d22b46-f202-4b24-a002-804948c431dc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / 1.0 = 100.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: no se puede dividir entre 0.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  -1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / -1.0 = -100.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  100\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / 100.0 = 1.0\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  101\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / 101.0 = 0.9900990099009901\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: ingresa un valor numérico válido.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número (o 'salir'):  salir\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fin.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Use a try-except block to handle the case when the user inputs 0 or a non-numeric value.\n",
+    "while True:\n",
+    "    s = input(\"Ingresa un número (o 'salir'): \").strip().lower()\n",
+    "    if s == \"salir\":\n",
+    "        print(\"Fin.\")\n",
+    "        break\n",
+    "    try:\n",
+    "        n = float(s)\n",
+    "        print(f\"100 / {n} = {100 / n}\")\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"Error: no se puede dividir entre 0.\")\n",
+    "    except ValueError:\n",
+    "        print(\"Error: ingresa un valor numérico válido.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7f118f1a-63ea-4efd-937d-0ca05bbc0bab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número distinto de 0:  0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Entrada inválida (no numérico o 0). Intenta nuevamente.\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Ingresa un número distinto de 0:  20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / 20.0 = 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# How would you improve the code to keep asking until a valid input is provided?\n",
+    "while True:\n",
+    "    s = input(\"Ingresa un número distinto de 0: \").strip()\n",
+    "    try:\n",
+    "        n = float(s)\n",
+    "        if n == 0:\n",
+    "            raise ZeroDivisionError\n",
+    "        break  # válido: salimos del bucle de validación\n",
+    "    except (ValueError, ZeroDivisionError):\n",
+    "        print(\"Entrada inválida (no numérico o 0). Intenta nuevamente.\")\n",
+    "\n",
+    "# Cálculo seguro\n",
+    "print(f\"100 / {n} = {100 / n}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -239,7 +641,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
