--- a/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
@@ -209,7 +209,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número:  1\n"
@@ -223,7 +223,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número:  2\n"
@@ -237,7 +237,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número:  -1\n"
@@ -269,7 +269,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número:  1\n"
@@ -283,7 +283,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número:  -1\n",
@@ -323,7 +323,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  1\n"
@@ -337,7 +337,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  0\n"
@@ -351,7 +351,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  -1\n"
@@ -365,7 +365,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  100\n"
@@ -379,7 +379,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  101\n"
@@ -393,7 +393,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  a\n"
@@ -407,7 +407,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número (o 'salir'):  salir\n"
@@ -444,7 +444,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número distinto de 0:  0\n"
@@ -458,7 +458,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Ingresa un número distinto de 0:  20\n"
@@ -573,11 +573,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4ed12cf9-7f2c-48e5-b237-ca4278b539c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45\n",
+      "Hola MundoHola Mundo\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    return a * b\n",
+    "\n",
+    "print(multiply(5,9))\n",
+    "\n",
+    "# What happens if you pass string, and why?\n",
+    "print(multiply('Hola Mundo',2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fe5c7a0c",
+   "metadata": {},
+   "source": [
+    "- Type Hints, son solo sugerencias que sirven para la legibiilidad del código, no aplica de forma estricta."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -596,11 +621,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f5145e77-6efa-4a00-8aa5-d010a3536291",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Car:\n",
+    "    def __init__(self, brand, model, year):\n",
+    "        self.brand = brand\n",
+    "        self.model = model\n",
+    "        self.year = year\n",
+    "    \n",
+    "    def display_info(self):\n",
+    "        print(f'Car information, brand: {self.brand}, model: {self.model}, year: {self.year}')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "67301f45",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Car information, brand: Kia, model: Rio, year: 2025\n",
+      "Car information, brand: Hyundai, model: Elantra, year: 2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "car1 = Car('Kia', 'Rio', 2025)\n",
+    "car2 = Car('Hyundai', 'Elantra', 2024)\n",
+    "\n",
+    "car1.display_info()\n",
+    "car2.display_info()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -618,18 +676,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "eb1d3e2b-d327-4e40-9267-fac280dc9f6f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Student:\n",
+    "    def __init__(self,name, age, grade):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "    \n",
+    "    def is_passed(self):\n",
+    "        if self.grade >= 11:\n",
+    "            return(\"Passed\")\n",
+    "        else:\n",
+    "            return(\"Failed\")  \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "83aa4985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jorge - Passed\n",
+      "Max - Failed\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1 = Student(\"Jorge\", 18, 15)\n",
+    "student2 = Student(\"Max\", 17, 9)\n",
+    "\n",
+    "print(student1.name, \"-\", student1.is_passed()) \n",
+    "print(student2.name, \"-\", student2.is_passed())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e7fa0d24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Student:\n",
+    "    #class atrtribute\n",
+    "    school = 'PUCP'\n",
+    "    \n",
+    "    def __init__(self,name, age, grade):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        self.grade = grade\n",
+    "    \n",
+    "    def is_passed(self):\n",
+    "        if self.grade >= 11:\n",
+    "            return(\"Passed\")\n",
+    "        else:\n",
+    "            return(\"Failed\")\n",
+    "    \n",
+    "    def display_info(self):\n",
+    "        print(f'Student information, name: {self.name}, age: {self.age}, grade: {self.grade} - {self.is_passed()}, school : {Student.school}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6374058b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student information, name: Jorge, age: 18, grade: 15 - Passed, school : PUCP\n",
+      "Student information, name: Max, age: 17, grade: 9 - Failed, school : PUCP\n"
+     ]
+    }
+   ],
+   "source": [
+    "student1 = Student(\"Jorge\", 18, 15)\n",
+    "student2 = Student(\"Max\", 17, 9)\n",
+    "\n",
+    "student1.display_info()\n",
+    "student2.display_info()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -641,7 +784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.2"
   }
  },
  "nbformat": 4,
