--- a/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
@@ -504,8 +504,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "fceb91b4-87d8-4fa6-b40e-82162eee295e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paso 1: 1\n",
+      "Paso 2: 2\n",
+      "Paso 3: 6\n",
+      "Paso 4: 24\n",
+      "Paso 5: 120\n",
+      "\n",
+      "El factorial de 5 es: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Factorial con while loop\n",
+    "n = 5\n",
+    "resultado = 1\n",
+    "i = 1\n",
+    "\n",
+    "while i <= n:\n",
+    "    resultado *= i\n",
+    "    print(f\"Paso {i}: {resultado}\")  # imprime el valor acumulado en cada paso\n",
+    "    i += 1\n",
+    "\n",
+    "print(f\"\\nEl factorial de {n} es: {resultado}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f8cd983b-b20b-4f85-96e4-2bc7c3609147",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paso 1: 1\n",
+      "Paso 2: 2\n",
+      "Paso 3: 6\n",
+      "Paso 4: 24\n",
+      "Paso 5: 120\n",
+      "\n",
+      "El factorial de 5 es: 120\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Factorial con for loop\n",
+    "n = 5\n",
+    "resultado = 1\n",
+    "\n",
+    "for i in range(1, n+1):\n",
+    "    resultado *= i\n",
+    "    print(f\"Paso {i}: {resultado}\")\n",
+    "\n",
+    "print(f\"\\nEl factorial de {n} es: {resultado}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a7a9930-9534-404b-ada4-3e7f9ca9bfbb",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -530,8 +596,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "876111eb-152a-4dbe-9c18-862f3bd37c1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Máximo: 20\n",
+      "Mínimo: 5\n",
+      "Promedio: 11.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analyze_numbers(lst):\n",
+    "    max_val = max(lst)       # máximo\n",
+    "    min_val = min(lst)       # mínimo\n",
+    "    avg_val = sum(lst) / len(lst)  # promedio\n",
+    "    return max_val, min_val, avg_val\n",
+    "\n",
+    "numeros = [10, 5, 20, 7, 15]\n",
+    "\n",
+    "maximo, minimo, promedio = analyze_numbers(numeros)\n",
+    "\n",
+    "print(\"Máximo:\", maximo)\n",
+    "print(\"Mínimo:\", minimo)\n",
+    "print(\"Promedio:\", promedio)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3b01661-72c4-445e-889d-04d5f1184b42",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6ba3076-dab9-4e71-bfe7-28e5b17eb3b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -552,8 +658,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e7d7baa8-bba4-4af8-9aca-33232054fa40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Buenos días, Nadia!\n",
+      "Hello, Grabiel!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name, message=\"Hello\"):\n",
+    "    print(f\"{message}, {name}!\")\n",
+    "\n",
+    "# Con el parámetro message (se sobreescribe el valor por defecto)\n",
+    "greet(\"Nadia\", \"Buenos días\")\n",
+    "\n",
+    "# Sin el parámetro message (usa el valor por defecto \"Hello\")\n",
+    "greet(\"Grabiel\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f11f079f-192c-4cd4-9318-b23760119bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2701c395-c138-40a6-8566-53e9209cc904",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -770,9 +910,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -784,7 +924,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
