--- a/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_01_assignment3_2025.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "fceb91b4-87d8-4fa6-b40e-82162eee295e",
    "metadata": {},
    "outputs": [
@@ -517,14 +517,17 @@
       "Paso 3: 6\n",
       "Paso 4: 24\n",
       "Paso 5: 120\n",
+      "Paso 6: 720\n",
+      "Paso 7: 5040\n",
+      "Paso 8: 40320\n",
       "\n",
-      "El factorial de 5 es: 120\n"
+      "El factorial de 8 es: 40320\n"
      ]
     }
    ],
    "source": [
     "# Factorial con while loop\n",
-    "n = 5\n",
+    "n = 8\n",
     "resultado = 1\n",
     "i = 1\n",
     "\n",
@@ -538,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "f8cd983b-b20b-4f85-96e4-2bc7c3609147",
    "metadata": {},
    "outputs": [
@@ -551,14 +554,17 @@
       "Paso 3: 6\n",
       "Paso 4: 24\n",
       "Paso 5: 120\n",
+      "Paso 6: 720\n",
+      "Paso 7: 5040\n",
+      "Paso 8: 40320\n",
       "\n",
-      "El factorial de 5 es: 120\n"
+      "El factorial de 8 es: 40320\n"
      ]
     }
    ],
    "source": [
     "# Factorial con for loop\n",
-    "n = 5\n",
+    "n = 8\n",
     "resultado = 1\n",
     "\n",
     "for i in range(1, n+1):\n",
@@ -596,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "876111eb-152a-4dbe-9c18-862f3bd37c1d",
    "metadata": {},
    "outputs": [
@@ -604,9 +610,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Máximo: 20\n",
-      "Mínimo: 5\n",
-      "Promedio: 11.4\n"
+      "Máximo: 67\n",
+      "Mínimo: 10\n",
+      "Promedio: 32.5\n"
      ]
     }
    ],
@@ -617,7 +623,7 @@
     "    avg_val = sum(lst) / len(lst)  # promedio\n",
     "    return max_val, min_val, avg_val\n",
     "\n",
-    "numeros = [10, 5, 20, 7, 15]\n",
+    "numeros = [10, 28, 20, 67, 15, 55]\n",
     "\n",
     "maximo, minimo, promedio = analyze_numbers(numeros)\n",
     "\n",
