--- a/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_11_assignment3_2025/group_11_assignment3_2025.ipynb
@@ -641,19 +641,176 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6e24846-b373-4be4-a436-8b366f07d3bd",
+   "cell_type": "markdown",
+   "id": "47db1578",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Part 2: Functions\n",
+    "6. Function with Multiple Returns\n",
+    "Write a function analyze_numbers(lst) that takes a list of numbers and returns:\n",
+    "\n",
+    "The maximum value\n",
+    "\n",
+    "The minimum value\n",
+    "\n",
+    "The average value\n",
+    "\n",
+    "Re-question: How would you call this function and unpack the results into three variables?\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "fc8b7eaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Máximo: 9, Mínimo: 1, Promedio: 4.67\n"
+     ]
+    }
+   ],
+   "source": [
+    "def analyze_numbers(lst):\n",
+    "    \"\"\"Toma una lista de números y devuelve máximo, mínimo y promedio\"\"\"\n",
+    "    if not lst:\n",
+    "        return None, None, None\n",
+    "    \n",
+    "    max_val = max(lst)\n",
+    "    min_val = min(lst)\n",
+    "    avg_val = sum(lst) / len(lst)\n",
+    "    \n",
+    "    return max_val, min_val, avg_val\n",
+    "\n",
+    "# Cómo llamar y desempaquetar:\n",
+    "numeros = [5, 2, 8, 1, 9, 3]\n",
+    "maximo, minimo, promedio = analyze_numbers(numeros)\n",
+    "print(f\"Máximo: {maximo}, Mínimo: {minimo}, Promedio: {promedio:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a845ae4a",
+   "metadata": {},
+   "source": [
+    "The function returns a tuple containing three values: (max_value, min_value, average_value)\n",
+    "When we write maximum, minimum, average = analyze_numbers(numbers), Python automatically:\n",
+    "    Calls the function with the numbers list\n",
+    "    Receives the returned tuple of three values\n",
+    "    Unpacks the tuple and assigns each value to the corresponding variable in order\n",
+    "    The first value goes to maximum, second to minimum, and third to average\n",
+    "This is called \"tuple unpacking\" or \"multiple assignment\" in Python, and it works because the number of variables on the left matches the number of values in the returned tuple.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf947a60",
+   "metadata": {},
+   "source": [
+    "7. Function with Default Parameters\n",
+    "Create a function greet(name, message=\"Hello\") that prints a greeting.\n",
+    "\n",
+    "Call the function with and without the message parameter.\n",
+    "Re-question: How does Python decide which value to use for message when it is not provided?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "00f86a8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Karlo!\n",
+      "Good morning, Karlo!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name, message=\"Hello\"):\n",
+    "    \"\"\"Prints a greeting with the given name and message\"\"\"\n",
+    "    print(f\"{message}, {name}!\")\n",
+    "\n",
+    "# Calling the function without the message parameter\n",
+    "greet(\"Karlo\")  # Uses default message: \"Hello, Karlo!\"\n",
+    "\n",
+    "# Calling the function with the message parameter\n",
+    "greet(\"Karlo\",\"Good morning\")  # Uses provided message: \"Good morning, Bob!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "357b6050",
+   "metadata": {},
+   "source": [
+    "Python uses the default value for the message parameter when no argument is provided for that parameter during the function call. The function definition specifies the default value (\"Hello\" in this case), and Python automatically uses this default when the parameter is omitted in the function call."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53bd93c7",
+   "metadata": {},
+   "source": [
+    "8. Function with Type Hints\n",
+    "Write a function multiply(a: int, b: int) -> int that returns the product of two integers.\n",
+    "\n",
+    "Test the function with both integers and strings.\n",
+    "Re-question: What happens if you pass strings, and why?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6b559f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 * 3 = 15\n",
+      "Error with strings: can't multiply sequence by non-int of type 'str'\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply(a: int, b: int) -> int:\n",
+    "    \"\"\"Returns the product of two integers\"\"\"\n",
+    "    return a * b\n",
+    "\n",
+    "# Testing with integers (works as expected)\n",
+    "result1 = multiply(5, 3)\n",
+    "print(f\"5 * 3 = {result1}\")  # Output: 5 * 3 = 15\n",
+    "\n",
+    "# Testing with strings (will cause an error)\n",
+    "try:\n",
+    "    result2 = multiply(\"hello\", \"world\")\n",
+    "    print(f\"String multiplication: {result2}\")\n",
+    "except TypeError as e:\n",
+    "    print(f\"Error with strings: {e}\")  # Output: Error with strings: can't multiply sequence by non-int of type 'str'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90abd62b",
+   "metadata": {},
+   "source": [
+    "If you pass strings to this function, Python will raise a TypeError because the multiplication operator (*) behaves differently for strings and integers. For strings, multiplication is only defined between a string and an integer (e.g., \"hello\" * 3 = \"hellohellohello\"), but not between two strings. Since both parameters are strings in this case, Python doesn't know how to multiply two strings together, resulting in a TypeError.\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -665,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
