--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -167,26 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d816b167",
+   "id": "569ca269",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ingrese un número: -1\n",
-      "Número negativo ignorado.\n",
-      "Ingrese un número: 03\n",
-      "Número ingresado: 3\n",
-      "Ingrese un número: -2\n",
-      "Número negativo ignorado.\n",
-      "Ingrese un número: -3\n",
-      "Número negativo ignorado.\n",
-      "Ingrese un número: -4\n",
-      "Número negativo ignorado.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "while True:\n",
     "    num = int(input(\"Ingrese un número: \"))\n",
@@ -195,6 +178,52 @@
     "        continue   # vuelve al inicio sin romper\n",
     "    print(f\"Número ingresado: {num}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e08479b4",
+   "metadata": {},
+   "source": [
+    "# 4. Try-Except Block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b5e1cbcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número para dividir 100: 5\n",
+      "100 dividido entre 5.0 es 20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "while True:\n",
+    "    try:\n",
+    "        num = input(\"Ingrese un número para dividir 100: \")\n",
+    "        num = float(num)  # convertir a número (puede dar error si es texto)\n",
+    "        result = 100 / num\n",
+    "        print(f\"100 dividido entre {num} es {result}\")\n",
+    "        break  # salimos si todo sale bien\n",
+    "    except ZeroDivisionError:\n",
+    "        print(\"❌ No se puede dividir entre 0. Intente nuevamente.\")\n",
+    "    except ValueError:\n",
+    "        print(\"❌ Entrada inválida. Ingrese un número válido.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0eb47c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
