--- a/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
+++ b/Lecture_3/Assignment_3/group_03_assignment3_2025/group_03_assignment3_2025.ipynb
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "569ca269",
+   "id": "0429e4b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e08479b4",
+   "id": "503970a2",
    "metadata": {},
    "source": [
     "# 4. Try-Except Block"
@@ -190,7 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b5e1cbcd",
+   "id": "74a77b3b",
    "metadata": {},
    "outputs": [
     {
@@ -218,9 +218,108 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9551ab51",
+   "metadata": {},
+   "source": [
+    "# 5. While Loop Structure (Factorial con pasos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1100527b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número para calcular su factorial: 33\n",
+      "Paso 1: factorial = 1\n",
+      "Paso 2: factorial = 2\n",
+      "Paso 3: factorial = 6\n",
+      "Paso 4: factorial = 24\n",
+      "Paso 5: factorial = 120\n",
+      "Paso 6: factorial = 720\n",
+      "Paso 7: factorial = 5040\n",
+      "Paso 8: factorial = 40320\n",
+      "Paso 9: factorial = 362880\n",
+      "Paso 10: factorial = 3628800\n",
+      "Paso 11: factorial = 39916800\n",
+      "Paso 12: factorial = 479001600\n",
+      "Paso 13: factorial = 6227020800\n",
+      "Paso 14: factorial = 87178291200\n",
+      "Paso 15: factorial = 1307674368000\n",
+      "Paso 16: factorial = 20922789888000\n",
+      "Paso 17: factorial = 355687428096000\n",
+      "Paso 18: factorial = 6402373705728000\n",
+      "Paso 19: factorial = 121645100408832000\n",
+      "Paso 20: factorial = 2432902008176640000\n",
+      "Paso 21: factorial = 51090942171709440000\n",
+      "Paso 22: factorial = 1124000727777607680000\n",
+      "Paso 23: factorial = 25852016738884976640000\n",
+      "Paso 24: factorial = 620448401733239439360000\n",
+      "Paso 25: factorial = 15511210043330985984000000\n",
+      "Paso 26: factorial = 403291461126605635584000000\n",
+      "Paso 27: factorial = 10888869450418352160768000000\n",
+      "Paso 28: factorial = 304888344611713860501504000000\n",
+      "Paso 29: factorial = 8841761993739701954543616000000\n",
+      "Paso 30: factorial = 265252859812191058636308480000000\n",
+      "Paso 31: factorial = 8222838654177922817725562880000000\n",
+      "Paso 32: factorial = 263130836933693530167218012160000000\n",
+      "Paso 33: factorial = 8683317618811886495518194401280000000\n",
+      "El factorial de 33 es 8683317618811886495518194401280000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "n = int(input(\"Ingrese un número para calcular su factorial: \"))\n",
+    "factorial = 1\n",
+    "contador = 1\n",
+    "\n",
+    "while contador <= n:\n",
+    "    factorial *= contador\n",
+    "    print(f\"Paso {contador}: factorial = {factorial}\")\n",
+    "    contador += 1\n",
+    "\n",
+    "print(f\"El factorial de {n} es {factorial}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "1a353aad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese un número para calcular su factorial (for): 2\n",
+      "Paso 1: factorial = 1\n",
+      "Paso 2: factorial = 2\n",
+      "El factorial de 2 es 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "n = int(input(\"Ingrese un número para calcular su factorial (for): \"))\n",
+    "factorial = 1\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    factorial *= i\n",
+    "    print(f\"Paso {i}: factorial = {factorial}\")\n",
+    "\n",
+    "print(f\"El factorial de {n} es {factorial}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0eb47c1",
+   "id": "a18ea31a",
    "metadata": {},
    "outputs": [],
    "source": []
